--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -37,8 +37,30 @@
             android:layout_height="wrap_content"
             android:text="Show me a barcode to scan."
             android:id="@+id/statusText"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:gravity="center"
             android:textColor="#ffffffff" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center_vertical|top"
+        android:id="@+id/RatingHolder"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/textView" />
+
+    </LinearLayout>
+
 </FrameLayout>
