--- a/app/src/main/res/layout/rating_bar_contents.xml
+++ b/app/src/main/res/layout/rating_bar_contents.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="fill_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
     android:background="#a6000000">
@@ -10,8 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:text="My product name is ..."
-        android:id="@+id/textView"
-        android:textSize="32sp"
+        android:id="@+id/productName"
+        android:textSize="20sp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:textColor="#ffffffff"/>
@@ -24,19 +26,18 @@
         <RatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ratingBar"
+            android:id="@+id/productStars"
             android:layout_gravity="right"
             android:numStars="5"
-            style="?android:ratingBarStyleIndicator"
-            android:indeterminateOnly="false"
+            style="?android:ratingBarStyleSmall"
             android:isIndicator="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20 Reviews"
-            android:id="@+id/textView2"
-            android:textSize="20sp"
+            android:id="@+id/productNumReviews"
+            android:textSize="12sp"
             android:textColor="#ffffffff"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
