working rating display

--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -42,25 +42,20 @@
             android:textColor="#ffffffff" />
     </LinearLayout>
 
-    <LinearLayout
+    <app.subversive.groceryratings.UI.RatingsLayout
         android:layout_width="fill_parent"
         android:layout_height="200dp"
         android:layout_gravity="center_vertical|top"
         android:id="@+id/RatingHolder"
-        android:orientation="vertical">
+        tools:background="#33ff0000">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/textView" />
+    </app.subversive.groceryratings.UI.RatingsLayout>
 
-    </LinearLayout>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/gestureGrabber"
+        />
 
 </FrameLayout>
