--- a/app/src/main/res/layout/caputure_photo_overlay.xml
+++ b/app/src/main/res/layout/caputure_photo_overlay.xml
@@ -1,8 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout
+<merge
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</FrameLayout>
+    <ImageButton
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:id="@+id/btnTakePicture"
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="@drawable/circle"
+        android:src="@drawable/ic_action_camera"
+        android:scaleType="fitCenter"
+        android:padding="8dp"
+        android:layout_marginBottom="16dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+
+    <ImageButton
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:id="@+id/btnRetakePicture"
+        android:layout_gravity="right|bottom"
+        android:background="@drawable/circle"
+        android:src="@drawable/ic_action_undo"
+        android:scaleType="fitCenter"
+        android:padding="8dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginRight="16dp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <ImageButton
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:id="@+id/btnCancelTakePicture"
+        android:layout_gravity="left|bottom"
+        android:background="@drawable/circle_red"
+        android:src="@drawable/ic_action_cancel"
+        android:scaleType="fitCenter"
+        android:padding="8dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="16dp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+</merge>
