--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -2,109 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="app.subversive.groceryratings.ScanFragment">
+    tools:context="app.subversive.groceryratings.ScanFragment"
+    android:id="@+id/root">
 
     <SurfaceView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/svScan"
-        android:layout_gravity="center" />
-
-    <app.subversive.groceryratings.UI.ObservableScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView" >
-
-        <app.subversive.groceryratings.UI.RatingsLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/RatingHolder">
-        </app.subversive.groceryratings.UI.RatingsLayout>
-
-    </app.subversive.groceryratings.UI.ObservableScrollView>
-
-    <ImageButton
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:id="@+id/btnTakePicture"
-        android:layout_gravity="center_horizontal|bottom"
-        android:background="@drawable/circle"
-        android:src="@drawable/ic_action_camera"
-        android:scaleType="fitCenter"
-        android:padding="8dp"
-        android:layout_marginBottom="16dp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        />
-
-
-    <ImageButton
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:id="@+id/btnRetakePicture"
-        android:layout_gravity="right|bottom"
-        android:background="@drawable/circle"
-        android:src="@drawable/ic_action_undo"
-        android:scaleType="fitCenter"
-        android:padding="8dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginRight="16dp"
-        android:visibility="gone"
-        tools:visibility="visible"/>
-
-    <ImageButton
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:id="@+id/btnCancelTakePicture"
-        android:layout_gravity="left|bottom"
-        android:background="@drawable/circle_red"
-        android:src="@drawable/ic_action_cancel"
-        android:scaleType="fitCenter"
-        android:padding="8dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="16dp"
-        android:visibility="gone"
-        tools:visibility="visible"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#a6000000"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:focusable="false"
-        android:gravity="center"
-        android:layout_gravity="top"
-        android:id="@+id/statusBar">
-
-        <ProgressBar
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:clickable="true"
-            android:layout_marginRight="8dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Show me a barcode to scan."
-            android:id="@+id/statusText"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:textColor="#ffffffff" />
-    </LinearLayout>
-
-    <include
-        layout="@layout/unknown_barcode"
-        android:id="@+id/unknownBarcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"
-        />
+        android:background="#009999"/>
+
 </FrameLayout>
