--- a/app/src/main/res/layout/caputure_photo_overlay.xml
+++ b/app/src/main/res/layout/caputure_photo_overlay.xml
@@ -16,8 +16,6 @@
         android:scaleType="fitCenter"
         android:padding="8dp"
         android:layout_marginBottom="16dp"
-        android:visibility="gone"
-        tools:visibility="visible"
         />
 
 
@@ -31,9 +29,7 @@
         android:scaleType="fitCenter"
         android:padding="8dp"
         android:layout_marginBottom="24dp"
-        android:layout_marginRight="16dp"
-        android:visibility="gone"
-        tools:visibility="visible"/>
+        android:layout_marginRight="16dp"/>
 
     <ImageButton
         android:layout_width="48dp"
@@ -45,8 +41,6 @@
         android:scaleType="fitCenter"
         android:padding="8dp"
         android:layout_marginBottom="24dp"
-        android:layout_marginLeft="16dp"
-        android:visibility="gone"
-        tools:visibility="visible"/>
+        android:layout_marginLeft="16dp"/>
 
 </merge>
