--- a/app/src/main/res/layout/caputure_photo_overlay.xml
+++ b/app/src/main/res/layout/caputure_photo_overlay.xml
@@ -6,6 +6,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="#ffffffff"
+        android:id="@+id/flashView"
+        />
+
     <ImageButton
         android:layout_width="64dp"
         android:layout_height="64dp"
@@ -15,8 +23,18 @@
         android:src="@drawable/ic_action_camera"
         android:scaleType="fitCenter"
         android:padding="8dp"
-        android:layout_marginBottom="16dp"
-        />
+        android:layout_marginBottom="16dp"/>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:id="@+id/cameraPhotoPending"
+        android:layout_gravity="center_horizontal|bottom"
+        android:scaleType="fitCenter"
+        android:padding="8dp"
+        android:visibility="invisible"
+        android:layout_marginBottom="16dp"/>
 
 
     <ImageButton
