set timeout to 60 seconds and made grey background consistent

--- a/app/src/main/res/layout/product_bar_status.xml
+++ b/app/src/main/res/layout/product_bar_status.xml
@@ -9,5 +9,5 @@
     android:id="@+id/tvStatus"
     android:textSize="20sp"
     android:textColor="#ffffffff"
-    tools:background="#a1000000"
+    tools:background="@color/blackOverlay"
     android:gravity="center" />
