--- a/app/src/main/res/layout/unknown_barcode.xml
+++ b/app/src/main/res/layout/unknown_barcode.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#c0000000"
+    android:background="@color/blackOverlay"
     android:padding="8dp"
     android:layout_gravity="top|center"
     >
