--- a/app/src/main/res/layout/rating_bar_status.xml
+++ b/app/src/main/res/layout/rating_bar_status.xml
@@ -5,10 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="#a6000000"
+    tools:background="@color/blackOverlay"
     android:gravity="center"
     android:orientation="horizontal"
-    android:id="@+id/LoadingLayout">
+    android:id="@+id/LoadingLayout"
+    >
 
     <ProgressBar
         style="?android:attr/progressBarStyleSmall"
