--- a/app/src/main/res/layout/rating_bar_contents.xml
+++ b/app/src/main/res/layout/rating_bar_contents.xml
@@ -4,43 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
+    android:layout_height="36dp"
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp"
     tools:background="@color/blackOverlay"
     android:id="@+id/RatingBarLayout">
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:text="My product name is ..."
         android:id="@+id/productName"
         android:textSize="20sp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:textColor="#ffffffff"/>
+        android:textColor="#ffffffff"
+        android:layout_gravity="center_vertical" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RatingBar
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/productStars"
+        android:numStars="5"
+        style="?android:ratingBarStyleSmall"
+        android:isIndicator="true"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="4dp"
+        android:rating="2"/>
 
-        <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/productStars"
-            android:layout_gravity="right"
-            android:numStars="5"
-            style="?android:ratingBarStyleSmall"
-            android:isIndicator="true" />
+    <TextView
+        android:layout_width="36sp"
+        android:layout_height="wrap_content"
+        android:text="(99+)"
+        android:id="@+id/productNumReviews"
+        android:textSize="14sp"
+        android:textColor="#ffffffff"
+        android:layout_gravity="center_vertical"
+        android:gravity="center" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20 Reviews"
-            android:id="@+id/productNumReviews"
-            android:textSize="12sp"
-            android:textColor="#ffffffff"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
 </LinearLayout>
