--- a/app/src/main/res/layout/rating_bar_contents.xml
+++ b/app/src/main/res/layout/rating_bar_contents.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:rater="http://schemas.android.com/app.subversivedev.groceryratings"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="36dp"
@@ -19,18 +20,27 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:textColor="#ffffffff"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:maxLines="1"/>
 
-    <RatingBar
+    <!--<RatingBar-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/productStars"-->
+        <!--android:numStars="5"-->
+        <!--style="?android:ratingBarStyleSmall"-->
+        <!--android:isIndicator="true"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:layout_margin="4dp"-->
+        <!--android:rating="2"/>-->
+
+    <app.subversive.groceryratings.UI.Rater
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/productStars"
-        android:numStars="5"
-        style="?android:ratingBarStyleSmall"
-        android:isIndicator="true"
         android:layout_gravity="center_vertical"
-        android:layout_margin="4dp"
-        android:rating="2"/>
+        android:layout_margin="8dp"
+        rater:foregroundColor="#ff208020"/>
 
     <TextView
         android:layout_width="36sp"
