--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TutorialFont" parent="AppTheme">
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
 </resources>
