--- a/app/src/main/res/layout/tutorial_overlay.xml
+++ b/app/src/main/res/layout/tutorial_overlay.xml
@@ -7,7 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:background="@drawable/tutorial_bacground" >
+    android:background="@drawable/tutorial_bacground"
+    android:id="@+id/tutorialRoot"
+    >
+
     <!--android:background="@color/blackOverlay">-->
 
     <View
