--- a/app/src/main/res/layout/tutorial_overlay.xml
+++ b/app/src/main/res/layout/tutorial_overlay.xml
@@ -19,10 +19,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="36sp"
-        android:text="WELCOME TO"
+        android:textSize="44sp"
+        android:text="Welcome To"
         android:id="@+id/textView2"
-        style="@style/TutorialFont" />
+        style="@style/TutorialFont"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"/>
 
     <app.subversive.groceryratings.UI.FontTextView
         android:layout_width="wrap_content"
