--- a/app/src/main/res/layout/rating_bar_contents.xml
+++ b/app/src/main/res/layout/rating_bar_contents.xml
@@ -2,14 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:rater="http://schemas.android.com/app.subversivedev.groceryratings"
+    xmlns:rater="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="36dp"
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
     tools:background="@color/blackOverlay"
-    android:id="@+id/RatingBarLayout">
+    android:id="@+id/RatingBarLayout"
+    android:gravity="center">
 
     <TextView
         android:layout_width="0dp"
@@ -18,37 +19,21 @@
         android:id="@+id/productName"
         android:textSize="20sp"
         android:layout_weight="1"
-        android:gravity="center_vertical"
         android:textColor="#ffffffff"
-        android:layout_gravity="center_vertical"
         android:maxLines="1"/>
-
-    <!--<RatingBar-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/productStars"-->
-        <!--android:numStars="5"-->
-        <!--style="?android:ratingBarStyleSmall"-->
-        <!--android:isIndicator="true"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--android:layout_margin="4dp"-->
-        <!--android:rating="2"/>-->
 
     <app.subversive.groceryratings.UI.Rater
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/productStars"
-        android:layout_gravity="center_vertical"
-        rater:foregroundColor="#ff208020" />
+        rater:radius="6dp"/>
 
     <TextView
-        android:layout_width="36sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(99+)"
         android:id="@+id/productNumReviews"
         android:textSize="14sp"
-        android:textColor="#ffffffff"
-        android:layout_gravity="center_vertical"
-        android:gravity="center" />
+        android:textColor="#ffffffff"/>
 
 </LinearLayout>
