--- a/app/src/main/res/layout/product_page.xml
+++ b/app/src/main/res/layout/product_page.xml
@@ -53,88 +53,45 @@
 
     </LinearLayout>
 
-    <GridLayout
+    <app.subversive.groceryratings.UI.SequentialLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:columnCount="5">
+        android:paddingBottom="8dp"
+        >
+
+        <View
+            android:layout_width="100dp"
+            android:layout_height="32dp"
+            android:background="#666" />
+
+        <View
+            android:layout_width="75dp"
+            android:layout_height="32dp"
+            android:background="#666" />
+
+        <View
+            android:layout_width="125dp"
+            android:layout_height="32dp"
+            android:background="#666" />
+
+        <View
+            android:layout_width="200dp"
+            android:layout_height="32dp"
+            android:background="#666" />
+
+        <View
+            android:layout_width="60dp"
+            android:layout_height="32dp"
+            android:background="#666" />
 
         <View
             android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp" />
+            android:layout_height="32dp"
+            android:background="#666" />
 
-        <View
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            />
 
-        <View
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            />
 
-        <View
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            />
-
-        <View
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            />
-
-        <View
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            />
-
-        <View
-            android:layout_width="48dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            />
-
-        <View
-            android:layout_width="32dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            />
-
-        <View
-            android:layout_width="64dp"
-            android:layout_height="24dp"
-            android:background="#999"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_columnSpan="2"
-            />
-
-    </GridLayout>
+    </app.subversive.groceryratings.UI.SequentialLayout>
 
     <include layout="@layout/review_item"/>
 
