--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<merge
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageButton
+    <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:id="@+id/imageButton2" />
+        android:id="@+id/ratingImage"
+        android:background="#DDD"
+        android:layout_marginRight="8dp"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -20,17 +24,17 @@
             <app.subversive.groceryratings.UI.Rater
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|top" />
+                android:layout_gravity="left|top"
+                android:id="@+id/ratingStars"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="12/12/2015"
-                android:id="@+id/textView5"
-                android:layout_gravity="right|top" />
-
-
+                android:id="@+id/tvDate"
+                android:layout_gravity="right|top"
+                />
         </FrameLayout>
 
         <TextView
@@ -38,6 +42,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="I love this product so much!"
-            android:id="@+id/textView4" />
+            android:id="@+id/tvReview"
+            android:maxLines="4"/>
     </LinearLayout>
-</LinearLayout>
+</merge>
