--- a/app/src/main/res/layout/product_page.xml
+++ b/app/src/main/res/layout/product_page.xml
@@ -63,26 +63,12 @@
         custom:numRows="2"
         />
 
-    <ScrollView
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ratingHolder"
-            android:orientation="vertical">
-
-            <!--<app.subversive.groceryratings.UI.RatingDisplay-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"/>-->
-
-
-            </LinearLayout>
-
-        </ScrollView>
-
-
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/ratingHolder"
+        android:scrollbars="vertical"/>
 
 </LinearLayout>
