--- a/app/src/main/res/layout/product_page.xml
+++ b/app/src/main/res/layout/product_page.xml
@@ -17,7 +17,7 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:id="@+id/prodImageButton"
-            android:background="@drawable/tutorial_background"/>
+            android:src="@drawable/tutorial_background"/>
 
         <LinearLayout
             android:orientation="vertical"
