--- a/app/src/main/res/layout/fragment_product_review.xml
+++ b/app/src/main/res/layout/fragment_product_review.xml
@@ -1,13 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="app.subversive.groceryratings.ProductReviewFragment">
+    tools:context="app.subversive.groceryratings.ProductReviewFragment"
+    android:orientation="vertical">
 
-    <TextView
+        <app.subversive.groceryratings.UI.Rater
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            custom:radius="12dp"
+            custom:ringWidth="3dp"
+            custom:editable="true"
+            android:layout_gravity="center"
+            android:layout_margin="8dp" />
+
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        />
+        android:layout_height="0dp"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_weight="1"
+        android:gravity="left|top" />
 
-</FrameLayout>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Submit Review"
+        android:id="@+id/btnSubmitReview"
+        style="?android:borderlessButtonStyle"/>
+</LinearLayout>
